--- a/style.css
+++ b/style.css
@@ -6,12 +6,18 @@
 }
 body{
   max-width: 1920px;
-  background: rgb(0, 0, 0);
+  /* background: rgb(0, 0, 0); */
+  background-color: #833471;
 }
 /* sheard style */
   .section_header{
     font-size: 48px;
     font-weight: 900;
+    color: rgb(255, 255, 255); 
+  }
+  .content_header{
+    font-size: 28px;
+    font-weight: 700;
     color: rgb(255, 255, 255); 
   }
   .section_discribtion{
@@ -211,7 +217,56 @@ body{
   height: 319px;
   border-radius: 12px;
 }
+/* BMI Calculator section start */
 
+
+/* bmi calculation and table section*/
+.bmi_calculation{
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(48, 48, 48, 0.54);
+  backdrop-filter: blur(20px);
+}
+.bmi_calculator_chart{
+  width: 35%;
+}
+table, th, td{
+  padding: 8px;
+  text-align: start;
+  border-collapse: collapse;
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.1)
+}
+.calculate_bmi{
+  width: 55%;
+}
+.bmi_box{
+  width: 45%;
+  margin: 12px 8px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 0.6);
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+
+}
+.last_bmi_box{
+  width: 93%;
+  margin: 12px 8px;
+  padding: 10px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+}
+.bmi_calculator{
+  width: 40%;
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+.bmi_table{
+  margin-top: 50px;
+}
 
 
 
